--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.04  xxx xxx xx xx:xx:xx xxxx
+	- added regression tests
+
 0.03  Wed Feb 20 18:19:02 2002
 	- minor tweaks to the configuration
 	  ( less warnings with recent Perls )
@@ -8,7 +11,7 @@
 
 0.02  xxx May 08 16:13:15 2001
 	- automated building of Config_m.pm
-	- reworked as a general override mechanism
+	- reworked as a generic override mechanism
 
 0.01  xxx Jan 18 20:08:10 2001
 	- first version
