--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
-0.04  xxx xxx xx xx:xx:xx xxxx
+0.04  Sat Nov 16 16:45:49 CET 2002
 	- added regression tests
+	- updated for ActivePerl 5.8.0
 
-0.03  Wed Feb 20 18:19:02 2002
+0.03  Wed Feb 20 18:19:02 CET 2002
 	- minor tweaks to the configuration
 	  ( less warnings with recent Perls )
 	- added this file
@@ -9,9 +10,9 @@
 	- downgraded the "can't find compiler" error
           to a warning
 
-0.02  xxx May 08 16:13:15 2001
+0.02  xxx May 08 16:13:15 CEST 2001
 	- automated building of Config_m.pm
 	- reworked as a generic override mechanism
 
-0.01  xxx Jan 18 20:08:10 2001
+0.01  xxx Jan 18 20:08:10 CET 2001
 	- first version
