--- a/Changes
+++ b/Changes
@@ -1,11 +1,18 @@
 Revision history for Perl extension ExtUtils::FakeConfig.
 
-0.06  Tue Aug 15 14:10:11 CEST 2006
-	- Remove -g from compiler flags.
-	- Make the choice to use nmake or dmake dynamic.
-	- Automated building the import library.
-	- Tested with ActivePerl 817.
-	- Switch tests to Test::More.
+0.07  Tue Aug 15 14:57:35 CEST 2006
+	- remove -g from compiler flags, strip libraries when linking.
+	- make the choice to use nmake or dmake dynamic.
+	- tested with ActivePerl 817.
+	- switch tests to Test::More.
+	- only build the import library for GCC.
+	  Provide the target for MSVC but do not run it at install.
+
+0.06  Wed Jul 28 09:39:07 CEST 2004
+	- automated creation of import libraries for perlxx.dll
+	- added documentation for Config_m.pm
+	- Config_m.pm uses the 'make' program found
+	  by Makefile.PL
 
 0.05  Sun Dec 22 15:58:20 CET 2002
 	- allow choosing which make to use via $ENV{MAKE}
