--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension ExtUtils::FakeConfig.
 
+0.11  Sun Apr 27 12:58:46 CEST 2008
+	- Updates for Perl 5.10 and 'ccname' (patch by Mark Dootson).
+	- Makefile implib_mingw now works with dmake (patch by Mark Dootson).
+
 0.10  Mon May 28 21:41:57 CEST 2007
 	- Corrected dmake URL (patch by Steve Hay).
 
