--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension ExtUtils::FakeConfig.
 
+0.12  Wed Oct 15 20:53:50 CEST 2008
+        - Added Config_u.pm, a quick hack to enable building modules
+	  as Universal binaries using Mac OS X system Perl.
+
 0.11  Sun Apr 27 12:58:46 CEST 2008
 	- Updates for Perl 5.10 and 'ccname' (patch by Mark Dootson).
 	- Makefile implib_mingw now works with dmake (patch by Mark Dootson).
